Fixed padding/spacing issue in code snippet

--- a/static/style.css
+++ b/static/style.css
@@ -246,7 +246,6 @@ white-space: pre-wrap;
 .markdown code {
   font-family: "IBM Plex Mono", monospace;
 	font-size: .9em;
-	padding: 2px 6px;
 	color: var(--code-snippet-text);
 	background-color: var(--code-snippet-highlight);
 }
